deployment/kube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proshop-backend-deployment
  namespace: dev-01
spec:
  selector:
    matchLabels:
      app: proshop-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: proshop-backend
    spec:
      containers:
        - name: proshop-backend
          image: yinglu91/proshop-backend:1.0
          ports:
            - containerPort: 5000
