deployment/kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proshop-backend-srv
  namespace: dev-01
  labels:
    name: proshop-backend
spec:
  type: NodePort
  ports:
    - name: proshop-backend
      protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30005
  selector:
    app: proshop-backend
# website:  http://localhost:30005/api/products
# http://localhost:30005/
# result: API is running...
